[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio async runtime
tokio = {version ="1", features = ["full"]}
# Serde/json
serde = {version = "1", features =["derive"]}
serde_json = "1"
#axum
axum = "0.6"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
